--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,7 +39,8 @@ dependencies:
   isar_flutter_libs: ^3.1.0+1
   path_provider: ^2.1.3
   provider: ^6.1.2
-  analyzer: ^5.13.0
+  analyzer:
+  intl:
   google_fonts: ^6.2.1
   popover: ^0.3.0+1
   flutter_quill: ^9.3.10
